# PocketMonstersStadiumRecomp

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  FINDINGS.md  ISSUES.md  README.md  aspMain.j.1.0.toml  build_pms.bat  function_adds.txt  function_drops.txt  function_merges.txt  function_renames.txt  function_sizes.txt  functions.json  game.toml  n64recomp.pin  njpgdspMain.j.1.0.toml  setup.bat  setup.sh  symbols.toml  translations.json
assets/: launcher.rml
assets/img/: boxart.tga
cmake/: FindFreetype.cmake
docs/: transfer_pak_universal_design.md
include/: debug_server.h  launcher_cfg.h  pms_render.h  trace.h
rsp/: aspMain.cpp  njpgdspMain.cpp
src/launcher/: pmsj_launcher_main.cpp
src/main/: app_paths.h  debug_server.cpp  diagnostics.cpp  gen1_charmap_jp.h  launcher_cfg.cpp  main.cpp  register_overlays.cpp  rsp_aspmain_hook.cpp  rt64_render_context.cpp  transfer_pak.cpp  ui_seam.cpp
tools/: GhidraExport.java  GhidraSeed.java  analyze_box_structure.py  analyze_gbcart_ring.py  analyze_gen1_save.py  build_aspmain_combined.py  build_jp_font.py  build_njpgdsp_combined.py  cv_repro.ps1  cv_repro_bg.ps1  cv_repro_big.ps1  cv_ringtrial.ps1  cv_trial.ps1  derive_boundary_merges.py  fix_truncated_delay_slots.py  fold_captures.py  gen_gen1_charmap_jp.py  gen_symbols_toml.py  ghidra_export.py  ghidra_seed.py  key_en.tsv  match_libultra.py  mips_find_functions.py  pms_build_translations.py  pms_cmd.py  pms_debug_fuzz.py  pms_drive.py  pms_fontrender.py  pms_hold_shot.py  pms_screenshot.ps1  pms_textprobe.py  pms_translate_capture.py  repair_gen1_box_checksums.py  scan_missing_funcs.py  strings_decoded.tsv  test_yay0_oracle.py  verify_jp_checksum.py
